bug 209328 : fix mailto URL regression. (r=nhotta, sr=alecf) In addition, address two other (related) issues. - Fix ConvertURISpecToUTF8 to make it fill up the out parameter - Make Tru64 Cxx happy with NS_STATIC_CAST of nsAutoPtr<PRUnichar>